--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ language: python
 sudo: false
 
 python:
-  - 2.7
+  # - 2.7
   - 3.3
-  - 3.4
-  - 3.5
+  # - 3.4
+  # - 3.5
 
 env:
   matrix:
@@ -19,20 +19,39 @@ matrix:
 
 addons:
   apt:
+    sources:
+      - r-packages-precise
     packages:
-    - r-base
+      - r-base-dev
+
+cache:
+  directories:
+    - ~/Rlib
 
 before_install:
+  - R --version
+  - Rscript --version
+
   - mkdir -p ~/Rlib
   - echo 'R_LIBS=~/Rlib' > ~/.Renviron
-  - Rscript -e "install.packages('knitr', dependencies=TRUE, repos='http://cran.rstudio.com')"
+  - echo 'options(repos = "http://cran.rstudio.com")' > ~/.Rprofile
+
+  - cat ~/.Renviron
+  - cat ~/.Rprofile
+
+  - Rscript -e "install.packages('knitr', dependencies=TRUE)"
+  - ls ~/Rlib
 
 install:
   - pip install pep8
   - pip install .
 
 before_script:
-    - export LANG=EN_US.UTF-8
+  - export LANG=EN_US.UTF-8
+
 script:
-    - if $PEP; then pep8 notedown; fi
-    - if ! $PEP; then nosetests; fi
+  - cat ~/.Renviron
+  - ls ~/Rlib
+  - Rscript -e 'require(knitr)'
+  - if $PEP; then pep8 notedown; fi
+  - if ! $PEP; then nosetests; fi
